<?xml version="1.0"?>
<package>
  <name>drone_description</name>
  <version>0.0.0</version>
  <description>The drone_description package</description>

  <maintainer email="ryan@todo.todo">ryan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>

  <export></export>
</package>
