<?xml version="1.0"?>
<package>
  <name>drone_launch</name>
  <version>0.0.0</version>
  <description>The drone_launch package</description>

  <maintainer email="zach@todo.todo">zach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>drone_description</run_depend>

  <export></export>
</package>
